--- a/config/zones/US-FLA-HST.yaml
+++ b/config/zones/US-FLA-HST.yaml
@@ -1,74 +1,74 @@
 bounding_box:
-  - - -81.3738299999999
-    - 24.6374500000001
-  - - -79.61802
-    - 26.47902
+- - -81.3738299999999
+  - 24.6374500000001
+- - -79.61802
+  - 26.47902
 capacity:
   battery storage:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   biomass:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   coal:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   gas:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 35.6
-    - datetime: '2021-01-01'
-      source: EIA.gov
-      value: 0.0
-    - datetime: '2023-01-01'
-      source: EIA.gov
-      value: 33.6
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 35.6
+  - datetime: '2021-01-01'
+    source: EIA.gov
+    value: 0.0
+  - datetime: '2023-01-01'
+    source: EIA.gov
+    value: 33.6
   geothermal:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   hydro:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   hydro storage:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   nuclear:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   oil:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
-    - datetime: '2021-01-01'
-      source: EIA.gov
-      value: 35.6
-    - datetime: '2023-01-01'
-      source: EIA.gov
-      value: 2.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
+  - datetime: '2021-01-01'
+    source: EIA.gov
+    value: 35.6
+  - datetime: '2023-01-01'
+    source: EIA.gov
+    value: 2.0
   solar:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   unknown:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
   wind:
-    - datetime: '2017-01-01'
-      source: EIA.gov
-      value: 0.0
+  - datetime: '2017-01-01'
+    source: EIA.gov
+    value: 0.0
 comment: City Of Homestead
 contributors:
-  - systemcatch
-  - robertahunt
-  - KabelWlan
+- systemcatch
+- robertahunt
+- KabelWlan
 country: US
 country_name: USA
 delays:
@@ -76,192 +76,154 @@ delays:
   consumptionForecast: 30
   production: 48
 emissionFactors:
-  direct: {}
   lifecycle:
-    battery discharge:
-      - datetime: '2017-01-01'
-        source: Electricity Maps, 2017 average
-        value: 490.0
-      - datetime: '2018-01-01'
-        source: Electricity Maps, 2018 average
-        value: 419.93
-      - datetime: '2019-01-01'
-        source: Electricity Maps, 2019 average
-        value: 413.72
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 418.58
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 402.41
-      - datetime: '2022-01-01'
-        source: Electricity Maps, 2022 average
-        value: 402.68
-      - datetime: '2023-01-01'
-        source: Electricity Maps, 2023 average
-        value: 372.62
-      - datetime: '2024-01-01'
-        source: Electricity Maps, 2024 average
-        value: 370.79
+    biomass:
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021
+      value: 280.6015234636058
     coal:
-      datetime: '2014-01-01'
-      source: IPCC 2014
-      value: 820.0
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 1044.16897110535
     gas:
-      datetime: '2014-01-01'
-      source: IPCC 2014
-      value: 490.0
-    hydro discharge:
-      - datetime: '2017-01-01'
-        source: Electricity Maps, 2017 average
-        value: 490.0
-      - datetime: '2018-01-01'
-        source: Electricity Maps, 2018 average
-        value: 419.93
-      - datetime: '2019-01-01'
-        source: Electricity Maps, 2019 average
-        value: 413.72
-      - datetime: '2020-01-01'
-        source: Electricity Maps, 2020 average
-        value: 418.58
-      - datetime: '2021-01-01'
-        source: Electricity Maps, 2021 average
-        value: 402.41
-      - datetime: '2022-01-01'
-        source: Electricity Maps, 2022 average
-        value: 402.68
-      - datetime: '2023-01-01'
-        source: Electricity Maps, 2023 average
-        value: 372.62
-      - datetime: '2024-01-01'
-        source: Electricity Maps, 2024 average
-        value: 370.79
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 522.4735945289923
+    geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 116.28737905336972
     oil:
-      datetime: '2014-01-01'
-      source: IPCC 2014; EIA 2020/BEIS 2021
-      value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 998.5315891025153
 fallbackZoneMixes:
   powerOriginRatios:
-    - _source: Electricity Maps, 2017 average
-      datetime: '2017-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0
-        gas: 1.0
-        geothermal: 0.0
-        hydro: 0.0
-        hydro discharge: 0.0
-        nuclear: 0.0
-        oil: 0.0
-        solar: 0.0
-        unknown: 0.0
-        wind: 0.0
-    - _source: Electricity Maps, 2018 average
-      datetime: '2018-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.0510705212262092
-        gas: 0.6788054310453536
-        geothermal: 0.0
-        hydro: 0.002119948959390617
-        hydro discharge: 0.0001270195123628857
-        nuclear: 0.20797480421058573
-        oil: 2.75132517753543e-06
-        solar: 0.013506043656123153
-        unknown: 0.046368118490404314
-        wind: 1.375662588767715e-06
-    - _source: Electricity Maps, 2019 average
-      datetime: '2019-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.028351897004424954
-        gas: 0.6606452217502501
-        geothermal: 0.0
-        hydro: 0.0014674075096396484
-        hydro discharge: 5.26496041056468e-06
-        nuclear: 0.20981056365746062
-        oil: 2.334302835751978e-06
-        solar: 0.016530714824867652
-        unknown: 0.08317228347637329
-        wind: 4.941224980788859e-07
-    - _source: Electricity Maps, 2020 average
-      datetime: '2020-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.040738361734314416
-        gas: 0.60517999871828
-        geothermal: 0.0
-        hydro: 0.0016486592579322483
-        hydro discharge: 6.53904677221279e-06
-        nuclear: 0.21503499778107232
-        oil: 4.114080577913929e-06
-        solar: 0.028099153623247355
-        unknown: 0.10927605092683211
-        wind: 2.6758247661228814e-07
-    - _source: Electricity Maps, 2021 average
-      datetime: '2021-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.030732100717347593
-        gas: 0.6173161566013098
-        geothermal: 0.0
-        hydro: 0.001010278513475863
-        hydro discharge: 4.615596351832644e-06
-        nuclear: 0.21517582904502472
-        oil: 2.0812143550081736e-06
-        solar: 0.040132912390946046
-        unknown: 0.09561149098867752
-        wind: 7.888473764950337e-07
-    - _source: Electricity Maps, 2022 average
-      datetime: '2022-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.024917017753807315
-        gas: 0.6059949509024442
-        geothermal: 0.0
-        hydro: 0.0007449877870854577
-        hydro discharge: 1.6065310404747467e-06
-        nuclear: 0.2075874985655973
-        oil: 6.3441582924870084e-06
-        solar: 0.04852777823314372
-        unknown: 0.11220055408927723
-        wind: 4.655661382600286e-06
-    - _source: Electricity Maps, 2023 average
-      datetime: '2023-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.018829360639947185
-        gas: 0.5985708301001147
-        geothermal: 0.0
-        hydro: 0.0010516886525531717
-        hydro discharge: 1.7614098896024452e-06
-        nuclear: 0.22785906181913967
-        oil: 3.506951221640904e-06
-        solar: 0.07202168597076694
-        unknown: 0.08164169749133973
-        wind: 3.364134203565031e-06
-    - _source: Electricity Maps, 2024 average
-      datetime: '2024-01-01'
-      value:
-        battery discharge: 0.0
-        biomass: 0.0
-        coal: 0.011836824452973634
-        gas: 0.710527087021093
-        geothermal: 0.0
-        hydro: 0.0006674523044236396
-        hydro discharge: 1.1343565809821363e-06
-        nuclear: 0.18595572696391394
-        oil: 5.361000279984068e-06
-        solar: 0.07917294590011055
-        unknown: 0.011817913330246848
-        wind: 6.837217748385479e-07
+  - _source: Electricity Maps, 2017 average
+    datetime: '2017-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0
+      gas: 1.0
+      geothermal: 0.0
+      hydro: 0.0
+      hydro discharge: 0.0
+      nuclear: 0.0
+      oil: 0.0
+      solar: 0.0
+      unknown: 0.0
+      wind: 0.0
+  - _source: Electricity Maps, 2018 average
+    datetime: '2018-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.0510705212262092
+      gas: 0.6788054310453536
+      geothermal: 0.0
+      hydro: 0.002119948959390617
+      hydro discharge: 0.0001270195123628857
+      nuclear: 0.20797480421058573
+      oil: 2.75132517753543e-06
+      solar: 0.013506043656123153
+      unknown: 0.046368118490404314
+      wind: 1.375662588767715e-06
+  - _source: Electricity Maps, 2019 average
+    datetime: '2019-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.028351897004424954
+      gas: 0.6606452217502501
+      geothermal: 0.0
+      hydro: 0.0014674075096396484
+      hydro discharge: 5.26496041056468e-06
+      nuclear: 0.20981056365746062
+      oil: 2.334302835751978e-06
+      solar: 0.016530714824867652
+      unknown: 0.08317228347637329
+      wind: 4.941224980788859e-07
+  - _source: Electricity Maps, 2020 average
+    datetime: '2020-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.040738361734314416
+      gas: 0.60517999871828
+      geothermal: 0.0
+      hydro: 0.0016486592579322483
+      hydro discharge: 6.53904677221279e-06
+      nuclear: 0.21503499778107232
+      oil: 4.114080577913929e-06
+      solar: 0.028099153623247355
+      unknown: 0.10927605092683211
+      wind: 2.6758247661228814e-07
+  - _source: Electricity Maps, 2021 average
+    datetime: '2021-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.030732100717347593
+      gas: 0.6173161566013098
+      geothermal: 0.0
+      hydro: 0.001010278513475863
+      hydro discharge: 4.615596351832644e-06
+      nuclear: 0.21517582904502472
+      oil: 2.0812143550081736e-06
+      solar: 0.040132912390946046
+      unknown: 0.09561149098867752
+      wind: 7.888473764950337e-07
+  - _source: Electricity Maps, 2022 average
+    datetime: '2022-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.024917017753807315
+      gas: 0.6059949509024442
+      geothermal: 0.0
+      hydro: 0.0007449877870854577
+      hydro discharge: 1.6065310404747467e-06
+      nuclear: 0.2075874985655973
+      oil: 6.3441582924870084e-06
+      solar: 0.04852777823314372
+      unknown: 0.11220055408927723
+      wind: 4.655661382600286e-06
+  - _source: Electricity Maps, 2023 average
+    datetime: '2023-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.018829360639947185
+      gas: 0.5985708301001147
+      geothermal: 0.0
+      hydro: 0.0010516886525531717
+      hydro discharge: 1.7614098896024452e-06
+      nuclear: 0.22785906181913967
+      oil: 3.506951221640904e-06
+      solar: 0.07202168597076694
+      unknown: 0.08164169749133973
+      wind: 3.364134203565031e-06
+  - _source: Electricity Maps, 2024 average
+    datetime: '2024-01-01'
+    value:
+      battery discharge: 0.0
+      biomass: 0.0
+      coal: 0.011836824452973634
+      gas: 0.710527087021093
+      geothermal: 0.0
+      hydro: 0.0006674523044236396
+      hydro discharge: 1.1343565809821363e-06
+      nuclear: 0.18595572696391394
+      oil: 5.361000279984068e-06
+      solar: 0.07917294590011055
+      unknown: 0.011817913330246848
+      wind: 6.837217748385479e-07
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
