--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -115,26 +115,27 @@ emissionFactors:
   lifecycle:
     biomass:
     - _comment: Mean of all US zones
-      datetime: '2022-01-01'
-      source: eGrid 2022
-      value: 274.05045073430733
+      datetime: '2021-01-01'
+      source: eGrid 2021
+      value: 280.6015234636058
     coal:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 1095.7452411944068
+    - datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 1120.5558582806743
     gas:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 576.179596013832
+    - datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 565.8020091180331
     geothermal:
     - _comment: Mean of all US zones
-      datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 67.7079050363912
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 116.28737905336972
     oil:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 1856.9238663414549
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 998.5315891025153
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
