--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -209,26 +209,27 @@ emissionFactors:
   lifecycle:
     biomass:
     - _comment: Mean of all US zones
-      datetime: '2022-01-01'
-      source: eGrid 2022
-      value: 274.05045073430733
+      datetime: '2021-01-01'
+      source: eGrid 2021
+      value: 280.6015234636058
     coal:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 1032.0663633884146
+    - datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 1006.9012095380552
     gas:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 571.1888745347414
+    - datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 582.3141304645546
     geothermal:
     - _comment: Mean of all US zones
-      datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 67.7079050363912
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 116.28737905336972
     oil:
-    - datetime: '2022-01-01'
-      source: eGrid 2022; IPCC 2014
-      value: 1541.8346930177995
+    - _comment: Mean of all US zones
+      datetime: '2021-01-01'
+      source: eGrid 2021; IPCC 2014
+      value: 998.5315891025153
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2015 average
